[FIX] m.Token - fix vertical alignment of delete icon with text
- downport token update
- downport icon alignment
- downport css refactoring

CR-Id: 012003146900009519132014

--- a/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/Token.less
+++ b/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/Token.less
@@ -1,7 +1,3 @@
-/* ============================================= */
-/* CSS for control sap.m/Token.control BlueCrystal theme*/
-/* ============================================= */
-
 .sapMToken {
 	font-size: @sapMFontMediumSize;
 	background: @sapUiButtonStandardBG;
@@ -9,14 +5,13 @@
 	border-radius: 0.125rem;
 	color: @sapUiDarkText;
 	padding-left: 0.375rem;
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	height: 1.625rem;
 }
 
 .sapMToken.sapMTokenReadOnly {
 	padding: 0.25rem 0.375rem;
-}
-
-.sapUiSizeCompact .sapMToken.sapMTokenReadOnly {
-	padding: 0.1rem 0.375rem;
 }
 
 .sapMToken:hover {
@@ -47,11 +42,28 @@
 }
 
 .sapMTokenIcon {
-	padding: 0.25rem 0.375rem 0.25rem 0.25rem;
-	font-size: @sapMFontSmallSize;
+	padding: 0.25rem 0.5rem;
+	font-size: @sapMFontLargeSize;
 	color: @sapUiElement;
+	vertical-align: middle;
+}
+
+.sapUiSizeCompact .sapMToken{
+	padding-left: 0.25rem;
+	padding-bottom: 0.1rem;
+	height: 1.25rem;
+}
+
+.sapUiSizeCompact .sapMToken.sapMTokenReadOnly {
+	padding: 0.1rem 0.25rem;
 }
 
 .sapUiSizeCompact .sapMTokenIcon {
-	padding: 0.1rem 0.375rem;
+	font-size: @sapMFontSmallSize;
+	padding: 0.1rem 0.25rem;
+	vertical-align: baseline;
+}
+
+.sapUiSizeCompact .sapMListTbl .sapMToken .sapUiIcon:not(.sapMLIBImgNav) {
+	font-size: 0.75rem;
 }
